syntax = "proto3";

package Superplane.Applications;

import "configuration.proto";
import "components.proto";
import "triggers.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/superplanehq/superplane/pkg/protos/applications";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Superplane Integrations API";
    version: "1.0";
    description: "API for Superplane Integrations";
    contact: {
      name: "API Support";
      email: "support@superplane.com";
    };
  };
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
};

service Applications {

  rpc ListApplications(ListApplicationsRequest) returns (ListApplicationsResponse) {
    option (google.api.http) = {
      get: "/api/v1/applications"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List available applications";
      description: "List available applications";
      tags: "Application";
    };
  }
}

message ListApplicationsRequest {
}

message ListApplicationsResponse {
  repeated ApplicationDefinition applications = 1;
}

message ApplicationDefinition {
  string name = 1;
  string label = 2;
  string icon = 3;
  string description = 4;
  repeated Configuration.Field configuration = 5;
  repeated Components.Component components = 6;
  repeated Triggers.Trigger triggers = 7;
}
